--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="/example.appcache>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!--   		<meta http-equiv="Cache-Control" content="public" />
