--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 		<!-- Cкрипт осцилятора -->
 		<script src="js\oscillator.js" ></script>
+		<script src="\index.js" ></script>
 	</body>
 </html>
 
