--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 		<div id="container"  class="test" style="height: 100px; min-width: 310px"></div>
 
 		<button id="crt">СОЗДАТЬ</button><button id="onoffoscill">СТАРТ</button>
-
+		<button id="subScribePush" style="width:100%">Подпишись на уведомления</button>
 		<!-- Cкрипт осцилятора -->
 		<script src="js\oscillator.js" ></script>
 		<script src="index.js" ></script>
+		
 	</body>
 </html>
 
