--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  -->		<title>Highcharts Example</title>
 		<!-- Включение  стилей -->
  		<!-- <link href="chart_css\daterangepicker.css" rel="stylesheet">-->
-		<link rel="manifest" href="manifest.json">
+		<link rel="manifest" href="/manifest.json">
 
 		
 	</head>
